# rust-diesel-experiment01

./: .env  Cargo.toml  README.md
migrations/2020-11-29_sqlite/: up.sql
src/: main.rs
src/db/: mod.rs  models.rs  repositories.rs  schema.rs
