[package]
name = "rust-diesel-experiment01"
version = "0.1.0"
authors = ["Jari Pennanen <ciantic@oksidi.com>"]
edition = "2018"


[dependencies]
serde = "1.0"
diesel = { version = "1.4.5", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }

# r2d2: Provides ConnectionManager and ability to pool DB connections for multi-threading
r2d2 = "0.8"